--- a/src/main/resources/static/css/cgw.css
+++ b/src/main/resources/static/css/cgw.css
@@ -298,6 +298,11 @@
     display: block;
 
   }
+  
+  .cgw30 {
+  	border: none; 
+  	background-color: white;
+  }
 
   .btn-primary-cgw1 {
     color: rgb(255, 255, 255);
